fix price history
